# gsheetpp

./: .gitignore  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: gsheetppConfig.cmake.in
docs/superpowers/specs/: 2026-04-28-string-copy-optimization-design.md
examples/: main.cpp  oauth_sample.cpp
include/gsheetpp/: google_sheets_client.hpp  google_sheets_client_impl.hpp
include/gsheetpp/detail/: internal_types.hpp  oauth_token_response.hpp  refresh_in_progress_guard.hpp
src/: google_sheets_client.cpp  google_sheets_client_detail.hpp  http_client.cpp  http_client.hpp
test/: CMakeLists.txt  test_google_sheets_client.cpp  test_sheet_management.cpp
